syntax="proto3";

option java_multiple_files=true;
option java_package="com.sachin.ecommerce_microservice_project.product";

message ProductGrpc{
  int64 id = 1;
  string name = 2;
  double price = 3;
  string imageUrl = 4;
}

message ProductServiceRequest{
  int64 childCategoryId = 1;
}

message ProductServiceResponse {
  repeated ProductGrpc products = 1;
}

message GetProductsRequest{
  repeated int64 productId = 1;
}

service ProductService {
  rpc getAllProductsByChildCategoryId(ProductServiceRequest) returns (ProductServiceResponse);
  rpc getAllProducts(GetProductsRequest) returns (ProductServiceResponse);
}
